# OperationalAnalysisChat

./: .gitignore  CLAUDE.MD  README.md  main.py  pyproject.toml
src/: config.py
src/agent/: graph.py  prompts.py
src/api/: chat.py  dependencies.py
src/data/: loader.py
src/models/: router.py
src/services/: insights_engine.py  insights_narration.py  session_store.py
static/: index.html
