[project]
name = "chat-operation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=0.3",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "openpyxl>=3.1",
    "pandas>=3.0.2",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]
